--- a/MarvelX/Base.lproj/Main.storyboard
+++ b/MarvelX/Base.lproj/Main.storyboard
@@ -9,11 +9,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Marvel Collection View Controller-->
+        <!--Marvel Xplore-->
         <scene sceneID="OdH-l9-QL5">
             <objects>
                 <collectionViewController id="1nw-68-agD" customClass="MarvelCollectionViewController" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="X5s-Ik-Sp4">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="X5s-Ik-Sp4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="0.59999999999999998" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -67,7 +67,7 @@
                             <outlet property="delegate" destination="1nw-68-agD" id="aLs-BO-JwS"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="n3e-c3-qKr"/>
+                    <navigationItem key="navigationItem" title="Marvel Xplore" id="n3e-c3-qKr"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2nH-Th-iOO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -78,12 +78,13 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gQE-O8-5X7" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kag-6z-Ynq">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="kag-6z-Ynq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.20000000000000001" green="0.59999999999999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.80000000000000004" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
