--- a/MarvelX/Base.lproj/Main.storyboard
+++ b/MarvelX/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -68,10 +69,88 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" title="Marvel Xplore" id="n3e-c3-qKr"/>
+                    <connections>
+                        <segue destination="lMC-46-9rn" kind="show" identifier="showDetail" id="AS5-Ve-c5w"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2nH-Th-iOO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1368.8" y="49.925037481259373"/>
+        </scene>
+        <!--Comics-->
+        <scene sceneID="UVK-zl-m8p">
+            <objects>
+                <collectionViewController id="lMC-46-9rn" customClass="DetailCollectionViewController" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="jcJ-Kx-0ZK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.59999999999999998" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="h0I-As-fkA">
+                            <size key="itemSize" width="355" height="250"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="r1D-AS-yoW" customClass="DetailCollectionViewCell">
+                                <rect key="frame" x="10" y="0.0" width="355" height="250"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="355" height="250"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Tw-hK-diJ">
+                                            <rect key="frame" x="13" y="10" width="329" height="17.5"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vld-0Z-K0X">
+                                            <rect key="frame" x="13" y="194" width="329" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="FFp-6H-EiB"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lkw-4S-6Jl">
+                                            <rect key="frame" x="97" y="32.5" width="160" height="160"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="160" id="1O6-li-HjX"/>
+                                                <constraint firstAttribute="height" constant="160" id="Eed-pO-0fA"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                </view>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="0.52172517123287676" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Lkw-4S-6Jl" firstAttribute="top" secondItem="4Tw-hK-diJ" secondAttribute="bottom" constant="5" id="M9j-nu-lgd"/>
+                                    <constraint firstItem="4Tw-hK-diJ" firstAttribute="top" secondItem="r1D-AS-yoW" secondAttribute="topMargin" constant="2" id="PTZ-M1-Jwh"/>
+                                    <constraint firstItem="Vld-0Z-K0X" firstAttribute="bottom" secondItem="r1D-AS-yoW" secondAttribute="bottomMargin" constant="2" id="XnX-JE-XBi"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="Vld-0Z-K0X" secondAttribute="trailing" constant="5" id="bVR-6u-JnC"/>
+                                    <constraint firstItem="4Tw-hK-diJ" firstAttribute="leading" secondItem="r1D-AS-yoW" secondAttribute="leadingMargin" constant="5" id="fBe-7G-omA"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="4Tw-hK-diJ" secondAttribute="trailing" constant="5" id="qaR-an-Nx9"/>
+                                    <constraint firstItem="Lkw-4S-6Jl" firstAttribute="centerX" secondItem="r1D-AS-yoW" secondAttribute="centerX" id="tXM-gT-JNe"/>
+                                    <constraint firstItem="Vld-0Z-K0X" firstAttribute="leading" secondItem="r1D-AS-yoW" secondAttribute="leadingMargin" constant="5" id="xfQ-Fq-mdy"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="description" destination="Vld-0Z-K0X" id="5af-UU-vFD"/>
+                                    <outlet property="imageView" destination="Lkw-4S-6Jl" id="EB1-9g-D6J"/>
+                                    <outlet property="title" destination="4Tw-hK-diJ" id="a05-14-aK0"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="lMC-46-9rn" id="vUm-KJ-Kqc"/>
+                            <outlet property="delegate" destination="lMC-46-9rn" id="Rqc-6l-5Fd"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Comics" id="gMe-cc-c0W"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="est-cj-gYh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2314" y="50"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ZCx-Kz-CH3">
