--- a/MarvelX/Base.lproj/Main.storyboard
+++ b/MarvelX/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
         <scene sceneID="OdH-l9-QL5">
             <objects>
                 <collectionViewController id="1nw-68-agD" customClass="MarvelCollectionViewController" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="X5s-Ik-Sp4">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="X5s-Ik-Sp4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="0.59999999999999998" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -45,12 +45,17 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="fgZ-pV-3Zn">
+                                            <rect key="frame" x="50" y="50" width="20" height="20"/>
+                                        </activityIndicatorView>
                                     </subviews>
                                 </view>
                                 <color key="backgroundColor" red="0.40000000000000002" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="9eb-01-ZPo" firstAttribute="leading" secondItem="cyp-Ev-Mbf" secondAttribute="leading" constant="5" id="3TS-aB-jb4"/>
+                                    <constraint firstItem="fgZ-pV-3Zn" firstAttribute="centerY" secondItem="cyp-Ev-Mbf" secondAttribute="centerY" id="56P-ec-LLG"/>
                                     <constraint firstItem="Dit-0D-cQs" firstAttribute="centerX" secondItem="cyp-Ev-Mbf" secondAttribute="centerX" id="7Ry-Fj-9KA"/>
+                                    <constraint firstItem="fgZ-pV-3Zn" firstAttribute="centerX" secondItem="cyp-Ev-Mbf" secondAttribute="centerX" id="9d5-Nq-Mq3"/>
                                     <constraint firstAttribute="bottom" secondItem="Dit-0D-cQs" secondAttribute="bottom" id="Ikc-Ak-Ed0"/>
                                     <constraint firstItem="9eb-01-ZPo" firstAttribute="top" secondItem="cyp-Ev-Mbf" secondAttribute="top" id="JpX-Ya-DPY"/>
                                     <constraint firstItem="9eb-01-ZPo" firstAttribute="centerX" secondItem="cyp-Ev-Mbf" secondAttribute="centerX" id="JyF-I3-f8g"/>
@@ -58,6 +63,7 @@
                                     <constraint firstItem="Dit-0D-cQs" firstAttribute="top" secondItem="9eb-01-ZPo" secondAttribute="bottom" id="okR-8B-xf7"/>
                                 </constraints>
                                 <connections>
+                                    <outlet property="activityIndicator" destination="fgZ-pV-3Zn" id="WSo-IH-AxK"/>
                                     <outlet property="imageView" destination="9eb-01-ZPo" id="HU2-Ck-PeP"/>
                                     <outlet property="name" destination="Dit-0D-cQs" id="k9I-fB-kZm"/>
                                 </connections>
@@ -86,48 +92,49 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="0.59999999999999998" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="h0I-As-fkA">
-                            <size key="itemSize" width="355" height="250"/>
+                            <size key="itemSize" width="355" height="255"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="r1D-AS-yoW" customClass="DetailCollectionViewCell">
-                                <rect key="frame" x="10" y="0.0" width="355" height="250"/>
+                                <rect key="frame" x="10" y="0.0" width="355" height="255"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="355" height="250"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="355" height="255"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Tw-hK-diJ">
-                                            <rect key="frame" x="13" y="10" width="329" height="17.5"/>
+                                            <rect key="frame" x="13" y="8" width="329" height="18"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vld-0Z-K0X">
-                                            <rect key="frame" x="13" y="194" width="329" height="50"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="50" id="FFp-6H-EiB"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lkw-4S-6Jl">
-                                            <rect key="frame" x="97" y="32.5" width="160" height="160"/>
+                                            <rect key="frame" x="97" y="28" width="160" height="160"/>
+                                            <gestureRecognizers/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="160" id="1O6-li-HjX"/>
                                                 <constraint firstAttribute="height" constant="160" id="Eed-pO-0fA"/>
                                             </constraints>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vld-0Z-K0X">
+                                            <rect key="frame" x="13" y="187" width="329" height="60"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="60" id="WBk-8N-3c3"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                 </view>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="0.52172517123287676" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="Lkw-4S-6Jl" firstAttribute="top" secondItem="4Tw-hK-diJ" secondAttribute="bottom" constant="5" id="M9j-nu-lgd"/>
-                                    <constraint firstItem="4Tw-hK-diJ" firstAttribute="top" secondItem="r1D-AS-yoW" secondAttribute="topMargin" constant="2" id="PTZ-M1-Jwh"/>
-                                    <constraint firstItem="Vld-0Z-K0X" firstAttribute="bottom" secondItem="r1D-AS-yoW" secondAttribute="bottomMargin" constant="2" id="XnX-JE-XBi"/>
+                                    <constraint firstItem="Lkw-4S-6Jl" firstAttribute="top" secondItem="4Tw-hK-diJ" secondAttribute="bottom" constant="2" id="M9j-nu-lgd"/>
+                                    <constraint firstItem="4Tw-hK-diJ" firstAttribute="top" secondItem="r1D-AS-yoW" secondAttribute="topMargin" id="PTZ-M1-Jwh"/>
+                                    <constraint firstItem="Vld-0Z-K0X" firstAttribute="bottom" secondItem="r1D-AS-yoW" secondAttribute="bottomMargin" id="XnX-JE-XBi"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="Vld-0Z-K0X" secondAttribute="trailing" constant="5" id="bVR-6u-JnC"/>
                                     <constraint firstItem="4Tw-hK-diJ" firstAttribute="leading" secondItem="r1D-AS-yoW" secondAttribute="leadingMargin" constant="5" id="fBe-7G-omA"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="4Tw-hK-diJ" secondAttribute="trailing" constant="5" id="qaR-an-Nx9"/>
@@ -157,7 +164,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gQE-O8-5X7" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="kag-6z-Ynq">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kag-6z-Ynq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.80000000000000004" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
