--- a/MarvelX/Base.lproj/Main.storyboard
+++ b/MarvelX/Base.lproj/Main.storyboard
@@ -120,6 +120,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="collectionView" destination="QI6-59-FBq" id="Ui9-tP-XjN"/>
+                                    <outlet property="letterLabel" destination="gHp-t2-sbl" id="ZUn-qK-3zl"/>
                                     <segue destination="lMC-46-9rn" kind="show" identifier="showDetail" id="pG9-Dj-ws5"/>
                                 </connections>
                             </tableViewCell>
@@ -134,109 +135,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JdB-uB-Dvi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1208.8" y="34.632683658170919"/>
-        </scene>
-        <!--Marvel Xplore-->
-        <scene sceneID="OdH-l9-QL5">
-            <objects>
-                <collectionViewController id="1nw-68-agD" customClass="MarvelCollectionViewController" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="X5s-Ik-Sp4">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.59999999999999998" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="4" minimumInteritemSpacing="2" id="aWX-nI-Jzk">
-                            <size key="itemSize" width="120" height="120"/>
-                            <size key="headerReferenceSize" width="50" height="23"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="2" minY="2" maxX="2" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="cyp-Ev-Mbf" customClass="MarvelCollectionViewCell">
-                                <rect key="frame" x="2" y="25" width="120" height="120"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9eb-01-ZPo">
-                                            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
-                                        </imageView>
-                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="fgZ-pV-3Zn">
-                                            <rect key="frame" x="50" y="50" width="20" height="20"/>
-                                        </activityIndicatorView>
-                                        <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hv1-tB-cLA">
-                                            <rect key="frame" x="0.0" y="100" width="120" height="20"/>
-                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="eDJ-Ay-s4b">
-                                                <rect key="frame" x="0.0" y="0.0" width="120" height="20"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dit-0D-cQs">
-                                                        <rect key="frame" x="0.0" y="0.0" width="120" height="20"/>
-                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
-                                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                </subviews>
-                                                <constraints>
-                                                    <constraint firstAttribute="bottom" secondItem="Dit-0D-cQs" secondAttribute="bottom" id="2wv-9G-PEu"/>
-                                                    <constraint firstItem="Dit-0D-cQs" firstAttribute="leading" secondItem="eDJ-Ay-s4b" secondAttribute="leading" id="OLq-sp-mV6"/>
-                                                    <constraint firstItem="Dit-0D-cQs" firstAttribute="top" secondItem="eDJ-Ay-s4b" secondAttribute="top" id="RCa-pF-kWH"/>
-                                                    <constraint firstAttribute="trailing" secondItem="Dit-0D-cQs" secondAttribute="trailing" id="kSS-QY-npI"/>
-                                                </constraints>
-                                            </view>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="20" id="JwB-vq-hHP"/>
-                                            </constraints>
-                                            <blurEffect style="light"/>
-                                        </visualEffectView>
-                                    </subviews>
-                                </view>
-                                <color key="backgroundColor" red="0.40000000000000002" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstItem="9eb-01-ZPo" firstAttribute="leading" secondItem="cyp-Ev-Mbf" secondAttribute="leading" id="3TS-aB-jb4"/>
-                                    <constraint firstItem="fgZ-pV-3Zn" firstAttribute="centerY" secondItem="cyp-Ev-Mbf" secondAttribute="centerY" id="56P-ec-LLG"/>
-                                    <constraint firstItem="fgZ-pV-3Zn" firstAttribute="centerX" secondItem="cyp-Ev-Mbf" secondAttribute="centerX" id="9d5-Nq-Mq3"/>
-                                    <constraint firstItem="hv1-tB-cLA" firstAttribute="leading" secondItem="cyp-Ev-Mbf" secondAttribute="leading" id="Ao5-2J-fJr"/>
-                                    <constraint firstItem="9eb-01-ZPo" firstAttribute="top" secondItem="cyp-Ev-Mbf" secondAttribute="top" id="JpX-Ya-DPY"/>
-                                    <constraint firstItem="9eb-01-ZPo" firstAttribute="centerX" secondItem="cyp-Ev-Mbf" secondAttribute="centerX" id="JyF-I3-f8g"/>
-                                    <constraint firstAttribute="trailing" secondItem="9eb-01-ZPo" secondAttribute="trailing" id="KYM-QF-iEs"/>
-                                    <constraint firstAttribute="bottom" secondItem="hv1-tB-cLA" secondAttribute="bottom" id="SJm-In-hA4"/>
-                                    <constraint firstAttribute="bottom" secondItem="9eb-01-ZPo" secondAttribute="bottom" id="dgJ-yz-ELA"/>
-                                    <constraint firstAttribute="trailing" secondItem="hv1-tB-cLA" secondAttribute="trailing" id="oqq-Kt-KmZ"/>
-                                </constraints>
-                                <connections>
-                                    <outlet property="activityIndicator" destination="fgZ-pV-3Zn" id="WSo-IH-AxK"/>
-                                    <outlet property="imageView" destination="9eb-01-ZPo" id="HU2-Ck-PeP"/>
-                                    <outlet property="name" destination="Dit-0D-cQs" id="k9I-fB-kZm"/>
-                                </connections>
-                            </collectionViewCell>
-                        </cells>
-                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="jxF-ue-gby">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="23"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                            <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qei-ol-tGr">
-                                    <rect key="frame" x="5" y="0.0" width="11.5" height="23"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                            <constraints>
-                                <constraint firstItem="Qei-ol-tGr" firstAttribute="leading" secondItem="jxF-ue-gby" secondAttribute="leading" constant="5" id="Cp5-gR-gKb"/>
-                                <constraint firstAttribute="bottom" secondItem="Qei-ol-tGr" secondAttribute="bottom" id="QR8-6l-uLb"/>
-                                <constraint firstItem="Qei-ol-tGr" firstAttribute="top" secondItem="jxF-ue-gby" secondAttribute="top" id="c9X-sL-3ce"/>
-                            </constraints>
-                        </collectionReusableView>
-                        <connections>
-                            <outlet property="dataSource" destination="1nw-68-agD" id="nQF-wN-TVw"/>
-                            <outlet property="delegate" destination="1nw-68-agD" id="aLs-BO-JwS"/>
-                        </connections>
-                    </collectionView>
-                    <navigationItem key="navigationItem" title="Marvel Xplore" id="n3e-c3-qKr"/>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2nH-Th-iOO" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2119" y="-501"/>
         </scene>
         <!--Comics-->
         <scene sceneID="UVK-zl-m8p">
