--- a/MarvelX/Base.lproj/LaunchScreen.storyboard
+++ b/MarvelX/Base.lproj/LaunchScreen.storyboard
@@ -20,7 +20,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="marvel3" translatesAutoresizingMaskIntoConstraints="NO" id="tT8-bj-cUj">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="tT8-bj-cUj" secondAttribute="trailing" id="KjR-eN-sBS"/>
+                            <constraint firstItem="tT8-bj-cUj" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="LwB-Ap-I7d"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="tT8-bj-cUj" secondAttribute="bottom" id="fJb-Q1-IGu"/>
+                            <constraint firstItem="tT8-bj-cUj" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="teE-B1-CbA"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -28,4 +39,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="marvel3" width="736" height="1308"/>
+    </resources>
 </document>
