improve loading efficiency in main table and fix offset bug

--- a/MarvelX/Base.lproj/LaunchScreen.storyboard
+++ b/MarvelX/Base.lproj/LaunchScreen.storyboard
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="marvel3" translatesAutoresizingMaskIntoConstraints="NO" id="tT8-bj-cUj">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="marvel5.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="tT8-bj-cUj">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                         </subviews>
@@ -40,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="marvel3" width="736" height="1308"/>
+        <image name="marvel5.jpeg" width="550" height="835"/>
     </resources>
 </document>
